@@ -231,7 +231,8 @@ get_text_for_node(CongNodePtr node)
 		break;		
 	case CONG_NODE_TYPE_TEXT:
 		cleaned_text = clean_text(node->content);
-		text = g_strdup_printf(_("Text: \"<span foreground=\"%s\">%s</span>\""), colour_string, cleaned_text);
+		text = g_strdup_printf("%s \"<span foreground=\"%s\">%s</span>\"", 
+				       _("Text:"), colour_string, cleaned_text);
 		g_free(cleaned_text);
 		break;
 	case CONG_NODE_TYPE_CDATA_SECTION:
@@ -248,7 +249,7 @@ get_text_for_node(CongNodePtr node)
 		break;
 	case CONG_NODE_TYPE_COMMENT:
 		cleaned_text = clean_text(node->content);
-		text = g_strdup_printf(_("<span foreground=\"%s\">&lt;!-- %s --&gt;</span>"), colour_string, cleaned_text);
+		text = g_strdup_printf("<span foreground=\"%s\">&lt;!-- %s --&gt;</span>", colour_string, cleaned_text);
 		g_free(cleaned_text);
 		break;
 	case CONG_NODE_TYPE_DOCUMENT:
